Retirado o botão de pesquisa; Ajustado métodos de pesquisa de reservas; Acrescentado a feature de pesquisa automática após 750 milisegundos

--- a/telinha/.classpath
+++ b/telinha/.classpath
@@ -7,7 +7,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX"/>
-	<classpathentry kind="lib" path="C:/Users/SERVIDOR/Desktop/JavaFX - Giit/ProjetoDeExtan/telinha/lib/mysql-connector-j-9.0.0/mysql-connector-j-9.0.0.jar">
+	<classpathentry kind="lib" path="C:/Users/Madara/OneDrive/Área de Trabalho/JAVAFX/telinha/lib/mysql-connector-j-9.0.0/mysql-connector-j-9.0.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
